--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
         <tr>
             <td>1</td>
             <td>Mew</td>
- 	    <td><img src="mew151.png" width="300" height="200"></td>
+ 	    <td><img src="img/mew151.png" width="300" height="200"></td>
 	    <td>4</td>
             <td>frog</td>
- 	    <td><img src="003.png" width="300" height="200"></td>
+ 	    <td><img src="img/003.png" width="300" height="200"></td>
 	    <td>7</td>
             <td>butterby</td>
- 	    <td><img src="049.png" width="300" height="200"></td>
+ 	    <td><img src="v049.png" width="300" height="200"></td>
         </tr>
         <tr>
             <td>2</td>
             <td>dog</td>
-	    <td><img src="kyu038.png" width="300" height="200"></td>
+	    <td><img src="img/kyu038.png" width="300" height="200"></td>
 	    <td>5</td>
             <td>fire</td>
- 	    <td><img src="004.png" width="300" height="200"></td>
+ 	    <td><img src="img/004.png" width="300" height="200"></td>
 	    <td>8</td>
             <td>water</td>
- 	    <td><img src="060.png" width="300" height="200"></td>
+ 	    <td><img src="img/060.png" width="300" height="200"></td>
 
         </tr>
         <tr>
             <td>3</td>
             <td>Fish</td>
-	    <td><img src="dew087.png" width="300" height="200"></td>
+	    <td><img src="img/dew087.png" width="300" height="200"></td>
 	    <td>6</td>
             <td>butterfly</td>
- 	    <td><img src="012.png" width="300" height="200"></td>
+ 	    <td><img src="img/012.png" width="300" height="200"></td>
 	    <td>9</td>
             <td>bird</td>
- 	    <td><img src="042.png" width="300" height="200"></td>
+ 	    <td><img src="img/042.png" width="300" height="200"></td>
         </tr>
     </table>
 </body>
